bug 52020 - search results wrap when scroll bars are initiated in search results

--- a/sugarcrm/themes/Sugar/css/style.css
+++ b/sugarcrm/themes/Sugar/css/style.css
@@ -6168,7 +6168,7 @@ margin-left:10px;
 }
 
 #sugar_spot_search_results section ul, #sugar_full_search_results section ul {
-    width:175px;
+    width:155px;
     line-height:20px;
     padding:0 0 25px 10px;
     float:left;
